<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterNoteActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_register_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            >

            <EditText
                android:id="@+id/titulo_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_titulo_del_comentario"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/nota_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_su_comentario"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/register_comment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-5dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorButton"
            android:text="@string/register_registrar"
            android:textSize="24sp" />
    </RelativeLayout>



</LinearLayout>